# incubeta

./: .dockerignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
flights/: constants.py  forms.py  models.py  urls.py  views.py
flights/management/commands/: sync_routes_data.py
flights/migrations/: 0001_initial.py  0002_route_route_unq_route_route_code.py  0003_routetripdetail_routetripdetail_unq_departure_date_and_more.py
flights/tests/: test_sync_routes_data.py  test_views.py
incubeta/: asgi.py  settings.py  urls.py  wsgi.py
