[project]
name = "incubeta"
version = "0.1.0"
requires-python = ">=3.9"
description = "A brief description of your project"
authors = [{ name = "Dragos Catarahia", email = "dragos@catarahia.me" }]
dependencies = ["Django>=5.0.4, <6", "python-dateutil>=2.9.0, <3"]

[project.optional-dependencies]
testing = ["pytest-django", "pre-commit"]
